feat: api.notifications
resta integracion smtp para correos
resta pruebas de fcm en https
