# docs/swagger.json
@@ -2572,20 +2572,24 @@
         ]
       }
     },
-    "/api.notifications/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api.notifications/send": {
+    "/api.notifications/subscribe/{tokenDevice}": {
       "post": {
-        "description": "",
+        "tags": [
+          "Notifications"
+        ],
+        "summary": "Endpoint para suscribir un dispositivo.",
+        "description": "Endpoint para suscribir un dispositivo, vinculado al usuario gracias al payload del accessToken.",
+        "operationId": "api.notifications/subscribe",
         "parameters": [
+          {
+            "name": "tokenDevice",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Token del dispositivo."
+          },
           {
             "name": "authorization",
             "in": "header",
@@ -2595,83 +2599,88 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/BadRequestError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/BadRequestError"
+                }
+              }
+            }
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/UnauthorizedError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/UnauthorizedError"
+                }
+              }
+            }
           },
           "403": {
             "description": "Forbidden"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/NotFoundError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/NotFoundError"
+                }
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "example": "any"
-                  },
-                  "notification": {
-                    "example": "any"
-                  }
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/InternalServerError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/InternalServerError"
                 }
               }
             }
           }
-        }
-      }
-    },
-    "/api.notifications/subscribe/{tokenDevice}": {
-      "post": {
-        "description": "",
-        "parameters": [
+        },
+        "security": [
           {
-            "name": "tokenDevice",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
+            "bearerAuth": []
           }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
+        ]
       }
     },
     "/api.notifications/unsubscribe/{tokenDevice}": {
       "post": {
-        "description": "",
+        "tags": [
+          "Notifications"
+        ],
+        "summary": "Endpoint para desuscribir un dispositivo.",
+        "description": "Endpoint para desuscribir un dispositivo, vinculado al usuario gracias al payload del accessToken.",
+        "operationId": "api.notifications/unsubscribe",
         "parameters": [
           {
             "name": "tokenDevice",
@@ -2679,7 +2688,8 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "Token del dispositivo."
           },
           {
             "name": "authorization",
@@ -2694,23 +2704,84 @@
             "description": "No Content"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/BadRequestError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/BadRequestError"
+                }
+              }
+            }
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/UnauthorizedError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/UnauthorizedError"
+                }
+              }
+            }
           },
           "403": {
             "description": "Forbidden"
           },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/NotFoundError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/NotFoundError"
+                }
+              }
+            }
+          },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/InternalServerError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/InternalServerError"
+                }
+              }
+            }
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/api.notifications/subscriptions": {
       "get": {
-        "description": "",
+        "tags": [
+          "Notifications"
+        ],
+        "summary": "Endpoint para obtener las suscripciones.",
+        "description": "Endpoint para obtener las suscripciones.",
+        "operationId": "api.notifications/subscriptions",
         "parameters": [
           {
             "name": "authorization",
@@ -2722,21 +2793,74 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
-          },
-          "204": {
-            "description": "No Content"
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/AllSubscriptionsResponse"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/AllSubscriptionsResponse"
+                }
+              }
+            }
           },
           "401": {
-            "description": "Unauthorized"
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/UnauthorizedError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/UnauthorizedError"
+                }
+              }
+            }
           },
           "403": {
             "description": "Forbidden"
           },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/NotFoundError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/NotFoundError"
+                }
+              }
+            }
+          },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/responses/InternalServerError"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/responses/InternalServerError"
+                }
+              }
+            }
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
@@ -3346,6 +3470,41 @@
                 "fileIndex": {
                   "type": "string",
                   "description": "File index",
+                  "example": "..."
+                }
+              }
+            }
+          }
+        }
+      },
+      "AllSubscriptionsResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "string",
+            "description": "Status",
+            "example": "success"
+          },
+          "data": {
+            "type": "array",
+            "description": "Data",
+            "items": {
+              "type": "object",
+              "description": "Subscriptions info",
+              "properties": {
+                "tokenDevice": {
+                  "type": "string",
+                  "description": "Token device",
+                  "example": "..."
+                },
+                "userEmail": {
+                  "type": "string",
+                  "description": "Email personal o de la empresa",
+                  "example": "..."
+                },
+                "userRole": {
+                  "type": "string",
+                  "description": "User role",
                   "example": "..."
                 }
               }
